ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-wit2024
  namespace: aks-store # Make sure this line is present and correct
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""  # Removed rewrite
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /api/students
            pathType: Prefix
            backend:
              service:
                name: my-backend-wit2024
                port:
                  number: 80  # Ensure this matches the backend service port
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-frontend-wit2024
                port:
                  number: 8081
